kubernetes/base/kafka/kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kafka-ui-deployment
  template:
    metadata:
      labels:
        name: kafka-ui-deployment
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-service
spec:
  type: ClusterIP
  selector:
    name: kafka-ui-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
