kubernetes/base/kafka/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kafka-ingress
spec:
  rules:
    - host: kafka.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kafka-ui-service
                port:
                  number: 8080
